k8s/app/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: route-optimizer
  namespace: alpha
  labels:
    app.kubernetes.io/name: route-optimizer
    app.kubernetes.io/part-of: route-optimizer
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: route-optimizer
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
